fixed section text alignment

--- a/src/HomePage/HomePage.scss
+++ b/src/HomePage/HomePage.scss
@@ -307,6 +307,7 @@ html {
 .section__inner {
   max-width: 720px;
   margin: 0 auto;
+  text-align: center;
 }
 
 .section__title {
